[project]
name = "gator-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.3",
    "beautifulsoup4==4.14.3",
    "discord-py[voice]>=2.7.0",
    "html5lib>=1.1",
    "python-dotenv==1.2.2",
    "pytubefix==10.3.6",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "setuptools==80.9.0",
]
